Flickering screen , about us page text size mismatch fixed

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,13 @@
     z-index: 10;
     background-color: #0000001a;
 }
+
+@keyframes bgMove {
+  0% { background-position: 0% 0%; }
+  50% { background-position: 100% 100%; }
+  100% { background-position: 0% 0%; }
+}
+
+.qwerty-bg {
+  animation: bgMove 6s linear infinite;
+}
